[package]
name = "ruplicity-console"
version = "0.1.0"
authors = ["mbrt"]
description = "Command line interface to browse duplicity backups"
repository = "https://github.com/mbrt/ruplicity-console"
readme = "README.md"
license = "MIT"
keywords = ["duplicity", "backup"]

[features]
default = []
lints = ["clippy", "nightly"]
nightly = [] # for building with nightly and unstable features
unstable = ["lints", "nightly"] # for building with travis-cargo

[dependencies]
clap = "1.5"
ruplicity = "0.2"
clippy = { version = "*", optional = true }
