[package]
name = "ruplicity-console"
version = "0.0.1"
authors = ["mbrt"]
description = "Command line interface to browse duplicity backups"
repository = "https://github.com/mbrt/ruplicity-console"
readme = "README.md"
license = "MIT"
keywords = ["duplicity", "backup"]

[features]
default = ["color"]
lints = ["clippy", "nightly"]
color = ["ansi_term", "clap/color"]
nightly = [] # for building with nightly and unstable features
unstable = ["lints", "nightly"] # for building with travis-cargo

[dependencies]
clap = { version = "1.5", default-features = false, features = ["suggestions"] }
ruplicity = { git = "https://github.com/mbrt/ruplicity" }
clippy = { version = "*", optional = true }
ansi_term = { version = "0.7", optional = true }
