[package]
name = "ruplicity-console"
version = "0.1.2"
authors = ["mbrt"]
description = "Command line interface to browse duplicity backups"
repository = "https://github.com/mbrt/ruplicity-console"
readme = "README.md"
license = "GPL-2.0"
keywords = ["duplicity", "backup"]

[features]
default = ["color"]
lints = ["clippy", "nightly"]
color = ["ansi_term", "clap/color"]
nightly = [] # for building with nightly and unstable features
unstable = ["lints", "nightly"] # for building with travis-cargo

[dependencies]
log = "0.3"
ruplicity = "0.2.2"
clap = { version = "1.5", default-features = false, features = ["suggestions"] }
clippy = { version = "*", optional = true }
ansi_term = { version = "0.7", optional = true }
